<resources>
    <string name="app_name">WeatherApp</string>
    <string name="forecast">forecast</string>
    <string name="cities">cities</string>
    <string name="settings">settings</string>
    <string name="date">date</string>
    <string name="temperature">temperature</string>
    <string name="weather_icon">weather icon</string>
    <string name="humidity">humidity %d%%</string>
    <string name="wind">wind %.02f m/s</string>
    <string name="temp_min">min %.02f°</string>
    <string name="temp_max">max %.02f°</string>
    <string name="temp">%.02f°C</string>
    <string name="pressure">pressure %d hPa</string>
    <string name="feels">feels like %.02f°</string>
    <string name="city">city</string>
    <string name="description">description</string>
    <string name="add_city">add city</string>
    <string name="add">add</string>
    <string name="current_location">current location</string>
    <string name="city_deleting">Do you want to delete %s?</string>
    <string name="city_name">%s, %s</string>
    <string name="no_internet">No Internet connection</string>
</resources>
