<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    app:cardBackgroundColor="#1C484848">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cities_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/city"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cities_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/temperature"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/cities_icon"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/weather_icon" />

    </LinearLayout>
</androidx.cardview.widget.CardView>